[gd_scene load_steps=8 format=3 uid="uid://3y8rcb2y8k74"]

[ext_resource type="Theme" uid="uid://d1vxaagqymyh5" path="res://menu/main_menu.tres" id="1_ehrdn"]
[ext_resource type="Texture2D" uid="uid://cg7hau20aisek" path="res://logo/full_icon.png" id="2_cobo4"]
[ext_resource type="Script" path="res://menu/main_menu.gd" id="2_m6dnd"]
[ext_resource type="PackedScene" uid="uid://dxrxg05aailc0" path="res://map/test_map.tscn" id="3_gn2ru"]
[ext_resource type="PackedScene" uid="uid://cex5iog2mfolq" path="res://menu/main_screen.tscn" id="3_i7uhw"]
[ext_resource type="PackedScene" uid="uid://pkis2eg4jocv" path="res://menu/black_transisiton.tscn" id="4_c5m72"]

[sub_resource type="LabelSettings" id="LabelSettings_0lmfl"]
font_size = 24

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ehrdn")
script = ExtResource("2_m6dnd")
start = ExtResource("3_gn2ru")
setting = ExtResource("3_i7uhw")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 672.0
offset_right = 77.0
offset_bottom = 696.0
text = "V 0.1"
label_settings = SubResource("LabelSettings_0lmfl")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 0
offset_right = 1296.0
offset_bottom = 728.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 1
layout_mode = 0
offset_left = 544.0
offset_top = 416.0
offset_right = 669.0
offset_bottom = 528.0
scale = Vector2(1.5, 1.5)

[node name="startButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../exitButton")
text = "MULAI"

[node name="settingButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "PENGATURAN"

[node name="creditButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "KREDIT"

[node name="exitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../startButton")
text = "KELUAR"

[node name="FullIcon" type="Sprite2D" parent="."]
position = Vector2(640, 248)
scale = Vector2(0.258333, 0.258333)
texture = ExtResource("2_cobo4")

[node name="black_transisition" parent="." instance=ExtResource("4_c5m72")]

[connection signal="pressed" from="VBoxContainer/startButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/settingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="VBoxContainer/creditButton" to="." method="_on_credit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exitButton" to="." method="_on_quit_button_pressed"]
